--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 <li class="nav-item"><a href="/blog/" class="nav-link">Articles</a></li>
 <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
-<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+<li class="nav-item"><a href="/contact/" class="nav-link">Contact</a></li>
 </ul>
 </div>
 </div>
