--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,7 +7,7 @@
 {% for article in articles %}
 <div class="col-md-4 d-flex ftco-animate">
 <div class="blog-entry justify-content-end">
-<a href="/" class="block-20" style="background-image: url({{ article.image.url }});">
+<a href="{% url 'detail' article.id %}" class="block-20" style="background-image: url({{ article.image.url }});">
 </a>
 <div class="text p-4 float-right d-block">
 <div class="topper d-flex align-items-center">
@@ -19,9 +19,9 @@
 <span class="mos">{{ article.pub_date|date:"F" }}</span>
 </div>
 </div>
-<h3 class="heading mb-3"><a href="/">{{ article.title }}</a></h3>
+<h3 class="heading mb-3"><a href="{% url 'detail' article.id %}">{{ article.title }}</a></h3>
 <p>{{ article.content|slice:100 }}</p>
-<p><a href="/" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
+<p><a href="{% url 'detail' article.id %}" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
 </div>
 </div>
 </div>
