--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,12 @@
 <div class="case">
 <div class="row">
 <div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-<a href="/" class="img w-100 mb-3 mb-md-0" style="background-image: url({{ article.image.url }});"></a>
+<a href="{% url 'detail' article.id %}" class="img w-100 mb-3 mb-md-0" style="background-image: url({{ article.image.url }});"></a>
 </div>
 <div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 <div class="text w-100 pl-md-3">
 <span class="subheading">{{ article.category }}</span>
-<h2><a href="blog-single.html">{{ article.title }}</a></h2>
+<h2><a href="{% url 'detail' article.id %}">{{ article.title }}</a></h2>
 <ul class="media-social list-unstyled">
 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
